--- a/Kevins Dumme Website/bindex.html
+++ b/Kevins Dumme Website/bindex.html
@@ -20,9 +20,23 @@
   <h1>eat shit and die</h1>
 
 
-  <div id="title"></div>
+  <div id="navbar">
+    <!--Hier kommt die Navbar hin-->
 
-  <div id="content"></div>
+
+
+
+
+  </div>
+
+  <div id="content">
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+      sed diam nonumy eirmod tempor invidunt ut labore et dolore
+      magna aliquyam erat, sed diam voluptua. At vero eos et
+      accusam et justo duo dolores et ea rebum. Stet clita kasd
+      gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+      amet.</p>
+  </div>
 
 
 
