--- a/Kevins Dumme Website/bindex.html
+++ b/Kevins Dumme Website/bindex.html
@@ -20,16 +20,13 @@
   <h1>eat shit and die</h1>
 
 
-  <div id="navbar">
+  <div id="navbars">
     <!--Hier kommt die Navbar hin-->
-
-
-
-
-
   </div>
 
   <div id="content">
+    <!--Bisschen Info und ein paar Bilder kommen hier hin-->
+
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
       sed diam nonumy eirmod tempor invidunt ut labore et dolore
       magna aliquyam erat, sed diam voluptua. At vero eos et
@@ -38,6 +35,10 @@
       amet.</p>
   </div>
 
+
+  <!--TODO  IMPRESSUM
+            GALLERY
+  -->
 
 
 
