--- a/Kevins Dumme Website/bindex.html
+++ b/Kevins Dumme Website/bindex.html
@@ -5,11 +5,9 @@
 
 <head>
 
-  <title>being sad on the internet</title>
+  <title>esad</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/hindex.css">
-  <!--<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
 </head>
@@ -17,16 +15,11 @@
 <body>
 
 
-  <h1>eat shit and die</h1>
+  <h1>e-sad</h1>
 
 
-  <div id="navbars">
-    <!--Hier kommt die Navbar hin-->
-  </div>
-
-  <div id="content">
+  <div id="mitte">
     <!--Bisschen Info und ein paar Bilder kommen hier hin-->
-
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
       sed diam nonumy eirmod tempor invidunt ut labore et dolore
       magna aliquyam erat, sed diam voluptua. At vero eos et
@@ -35,13 +28,14 @@
       amet.</p>
   </div>
 
-
-  <!--TODO  IMPRESSUM
-            GALLERY
-  -->
-
-
-
+  <div id="side">
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+      sed diam nonumy eirmod tempor invidunt ut labore et dolore
+      magna aliquyam erat, sed diam voluptua. At vero eos et
+      accusam et justo duo dolores et ea rebum. Stet clita kasd
+      gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+      amet.</p>
+  </div>
 
 
 
